# open-raccoon

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  SPECS.md  SPECS_AGENTS.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent_runtime/: Dockerfile  Makefile  pyproject.toml
agent_runtime/src/raccoon_runtime/: __init__.py  __main__.py  config.py  server.py  status_messages.py
agent_runtime/src/raccoon_runtime/llm/: __init__.py  orchestrator.py
agent_runtime/src/raccoon_runtime/mcp/: client.py  memory_server.py  tool_registry.py
agent_runtime/src/raccoon_runtime/runners/: claude_runner.py  raw_runner.py  runner_factory.py
agent_runtime/src/raccoon_runtime/sandbox/: e2b_manager.py
agent_runtime/src/raccoon_runtime/services/: agent_service.py  sandbox_service.py
agent_runtime/src/wai_agents_runtime/: __init__.py  __main__.py  config.py  server.py  status_messages.py
agent_runtime/src/wai_agents_runtime/llm/: orchestrator.py
agent_runtime/src/wai_agents_runtime/mcp/: __init__.py  code_exec_server.py  filesystem_server.py  mcp_server_manager.py  memory_server.py  tool_registry.py  web_search_server.py
agent_runtime/src/wai_agents_runtime/memory/: __init__.py  embeddings.py  memory_tool.py
agent_runtime/tests/: conftest.py  test_agent_service.py  test_agent_service_v2.py  test_base_runner.py  test_config.py  test_e2b_manager.py  test_mcp_client.py  test_mcp_server_manager.py  test_memory_tool.py  test_orchestrator.py  test_raw_runner.py  test_runner_factory.py  test_sandbox_service.py  test_status_messages.py  test_tool_registry.py
(+795 files in other folders)
