[project]
name = "raccoon-runtime"
version = "0.1.0"
description = "Open Raccoon AI Agent Runtime - gRPC sidecar for LLM orchestration"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

dependencies = [
    "grpcio>=1.67.0",
    "grpcio-tools>=1.67.0",
    "protobuf>=5.28.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raccoon_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# gRPC servicer methods use PascalCase to match protobuf RPC names
"src/raccoon_runtime/services/*_service.py" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
